--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-messenger-customer-chat": "^0.8.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.12.0",
     "react-tsparticles": "^2.0.6",
     "tsparticles": "^2.0.6",
     "typewriter-effect": "^2.18.2",
