--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.15.2",
     "react": "^18.1.0",
+    "react-animated-cursor": "^2.5.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
     "react-messenger-customer-chat": "^0.8.0",
