--- a/public/projects.json
+++ b/public/projects.json
@@ -1,7 +1,7 @@
 [{
         "id": 1,
-        "name": "Ryan refrigerator instrument",
-        "img": "https://i.ibb.co/Fnv51sv/1.png",
+        "name": "Ryan refrigerator instrument (MERN)",
+        "img": "https://i.ibb.co/gTr0fPT/fdgdg.png",
         "technologies": ["React", "TailwindCSS", "Daisy UI", "Stripe", "JWT", "Express.js", "Node.js", "MongoDB", "Firebase"],
         "description": [
             "Full-stack Single page application refrigerator tool buying website. Add JWT for Secure data.",
@@ -14,8 +14,8 @@
     },
     {
         "id": 2,
-        "name": "Ryan books store",
-        "img": "https://i.ibb.co/Xp9nQ9z/2.png",
+        "name": "Ryan books store (MERN)",
+        "img": "https://i.ibb.co/BG9kK0t/dfsf.png",
         "technologies": ["React", "Bootstrap", "JWT", "Express.js", "Node.js", "MongoDB", "Firebase"],
         "description": [
             "It’s a SPA book-buying website. Users can order any book, update & manage all inventory.",
@@ -28,8 +28,8 @@
     },
     {
         "id": 3,
-        "name": "Eyun fitness",
-        "img": "https://i.ibb.co/ZLxCvfN/3.png",
+        "name": "Eyun fitness (Gym Website)",
+        "img": "https://i.ibb.co/4Fvp298/fdsf.png",
         "technologies": ["React", "Bootstrap", "Firebase"],
         "description": [
             "Create a unique design and added an awesome gym service section.",
