--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/fiber": "^8.0.27",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.15.2",
-    "framer-motion": "^6.3.11",
+    "framer-motion": "^6.3.15",
+    "framer-motion-3d": "^6.3.16",
     "leaflet": "^1.8.0",
     "leaflet-draw": "^1.0.4",
     "react": "^18.1.0",
@@ -21,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
     "react-tsparticles": "^2.0.6",
+    "three": "^0.141.0",
     "tsparticles": "^2.0.6",
     "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
