--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
     "react-tsparticles": "^2.0.6",
+    "swiper": "^8.2.6",
     "three": "^0.141.0",
     "tsparticles": "^2.0.6",
     "typewriter-effect": "^2.18.2",
