--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-three/fiber": "^8.0.27",
+    "@emailjs/browser": "^3.10.0",
+    "@react-three/drei": "^9.57.2",
+    "@react-three/fiber": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
     "react-tsparticles": "^2.0.6",
+    "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^8.2.6",
     "three": "^0.141.0",
     "tsparticles": "^2.0.6",
