--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
+    "react-tilt": "^0.1.4",
     "react-tsparticles": "^2.0.6",
     "react-vertical-timeline-component": "^3.6.0",
     "swiper": "^8.2.6",
