--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
-    "daisyui": "^3.5.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
@@ -39,5 +38,8 @@
     "tsparticles": "^2.11.1",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.0"
   }
 }
