--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
     "framer-motion-3d": "^10.15.0",
+    "maath": "^0.7.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-animated-cursor": "^2.7.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-messenger-customer-chat": "^0.8.0",
@@ -40,6 +41,7 @@
     "typewriter-effect": "^2.20.1"
   },
   "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "daisyui": "^3.5.0"
   }
 }
