--- a/android/ios/Podfile
+++ b/android/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'portfolio' do
+target 'SI' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
@@ -45,7 +45,7 @@ target 'portfolio' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'portfolioTests' do
+  target 'SITests' do
     inherit! :complete
     # Pods for testing
   end
