--- a/android/ios/portfolio.xcodeproj/xcshareddata/xcschemes/portfolio.xcscheme
+++ b/android/ios/portfolio.xcodeproj/xcshareddata/xcschemes/portfolio.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "portfolio.app"
-               BlueprintName = "portfolio"
-               ReferencedContainer = "container:portfolio.xcodeproj">
+               BuildableName = "SI.app"
+               BlueprintName = "SI"
+               ReferencedContainer = "container:SI.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "portfolioTests.xctest"
-               BlueprintName = "portfolioTests"
-               ReferencedContainer = "container:portfolio.xcodeproj">
+               BuildableName = "SITests.xctest"
+               BlueprintName = "SITests"
+               ReferencedContainer = "container:SI.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "portfolio.app"
-            BlueprintName = "portfolio"
-            ReferencedContainer = "container:portfolio.xcodeproj">
+            BuildableName = "SI.app"
+            BlueprintName = "SI"
+            ReferencedContainer = "container:SI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "portfolio.app"
-            BlueprintName = "portfolio"
-            ReferencedContainer = "container:portfolio.xcodeproj">
+            BuildableName = "SI.app"
+            BlueprintName = "SI"
+            ReferencedContainer = "container:SI.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
